gcc/testsuite/g++.dg/gomp/pr34964.C
// PR c++/34964
// { dg-do compile }
// { dg-options "-fopenmp" }

char x[] = 0;	// { dg-error "initializer" }
#pragma omp threadprivate (x)
